--- a/gateway/gateway-dev.yml
+++ b/gateway/gateway-dev.yml
@@ -16,33 +16,25 @@ spring:
     gateway:
       routes:
       - id: workTime-signIn-route
-        uri: lb://workTime-service
+        uri: lb://workTime
         predicates:
         - Path=/insertSignInInfo/**
-        filters:
-        - StripPrefix=2
       - id: workTime-getLocation-route
-        uri: lb://workTime-service
+        uri: lb://workTime
         predicates:
         - Path=/getLocation/**
       - id: workTime-setLocation-route
-        uri: lb://workTime-service
+        uri: lb://workTime
         predicates:
         - Path=/setLocation/**
-        filters:
-        - StripPrefix=2
       - id: worker-manage-route
-        uri: lb://login-service
+        uri: lb://login
         predicates:
         - Path=/api/login/**
-#        filters:
-#        - StripPrefix=1
       - id: user-login-token
         uri: lb://userClient
         predicates:
         - Path=/api/validateToken/**
-#        filters:
-#        - StripPrefix=1
       discovery:
         locator:
           enabled: true
@@ -50,7 +42,7 @@ spring:
           cors-configurations:
            '[/**]':
             allowed-origins:
-            - "http://192.168.8.131:8120"
+            - "http://localhost:8120"
             allowed-methods:
              - GET
              - POST
