--- a/userClient/userClient-test.yml
+++ b/userClient/userClient-test.yml
@@ -6,7 +6,7 @@ spring:
   lifecycle:
     timeout-per-shutdown-phase: 30s
   datasource:
-    url: jdbc:mysql://192.168.8.10:3306/personal_management_system?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/personal_management_system?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
     username: root
     password: zyhdmm
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -24,7 +24,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://192.168.8.10:8761/eureka
+      defaultZone: http://localhost:8761/eureka
   instance:
     instance-id: userClient
     prefer-ip-address: true
