--- a/userClient/userClient-dev.yml
+++ b/userClient/userClient-dev.yml
@@ -26,5 +26,5 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
   instance:
-    instance-id: userClient-service
+    instance-id: userClient
     prefer-ip-address: true
